Rebill cobrando con fallos

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-
+  <script src="https://sdk.rebill.to/v2/rebill.min.js"></script>
   <link rel="icon" href="%PUBLIC_URL%/msk-favicion.svg" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
