--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <script src="https://checkout.placetopay.ec/lightbox.min.js"></script>
   <script src="https://sdk.rebill.to/v2/rebill.min.js"></script>
   <link rel="icon" href="%PUBLIC_URL%/msk-favicion.svg" />
 
@@ -30,7 +31,6 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-
 </body>
 
 </html>
